[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ldapx"
version = "0.1.1"
description = "LDAP query obfuscation library - Python port of github.com/Macmod/ldapx"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "João Paulo Assis" },
]
keywords = ["ldap", "obfuscation", "active-directory", "security", "red-team"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Networking",
]

dependencies = []

[project.optional-dependencies]
badldap = ["badldap>=0.1.0"]
ldap3 = ["ldap3>=2.9"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.4"]

[project.scripts]
ldapx = "ldapx.cli.main:main"

[project.urls]
Homepage = "https://github.com/j0hnZ3RA/ldapx-py"
Repository = "https://github.com/j0hnZ3RA/ldapx-py"

[tool.hatch.build.targets.wheel]
packages = ["src/ldapx"]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
